--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "firebase-tools": "^3.16.0",
     "http-server": "^0.10.0"
   }
 }
