--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,9 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "express": "^4.16.2",
     "firebase-admin": "~5.4.2",
-    "firebase-functions": "^0.7.1"
+    "firebase-functions": "^0.7.4"
   },
   "private": true
 }
